--- a/css/overrides.css
+++ b/css/overrides.css
@@ -21,18 +21,16 @@ h1 {
 {
     border-bottom: 1px solid #900;
 }
-
+ul.site-nav
+{
+    display: inline;
+    margin-left: 10px;
+}
 
 ul, ol
 {
     list-style-position: outside;
     margin-left: 30px;
-}
-
-ul.site-nav
-{
-    display: inline;
-    margin-left: 10px;
 }
 
 a, code, 
@@ -47,6 +45,12 @@ a, code,
 .post-content a:hover
 {
     border-bottom: 1px dotted #900;
+}
+
+.post-description
+{
+    font-style: italic;
+    text-transform: none;
 }
 
 .site-title a,
